<resources>
    <string name="app_name">Артеком</string>

    <string name="bold_font" translatable="false">fonts/GothamProBold.ttf</string>
    <string name="regular_font" translatable="false">fonts/GothamProRegular.ttf</string>
    <string name="medium_font" translatable="false">fonts/GothamProMedium.ttf</string>

    <string name="title_activity_order">Рабочая зона</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="new_order">Новый заказ</string>
    <string name="orders">Заказы</string>
    <string name="settlements">Взаиморасчёты</string>
    <string name="about_us">O нас</string>
    <string name="exit">Выход</string>
    <string name="category_name">Дополнительно</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
