<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_order"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/new_order"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/orders"/>
        <item
            android:id="@+id/nav_settlements"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/settlements"/>
    </group>

    <item android:title="@string/category_name">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>
